# bookshelf-app

./: .gitignore  pyproject.toml
apps/books/: forms.py  models.py  urls.py  views.py
apps/books/api/: serializers.py  views.py
apps/books/migrations/: 0001_initial.py
config/: api_router.py  settings.py  urls.py
